--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,85 @@
-/* You can add global styles to this file, and also import other style files */
+.table-container{
+    border: 1px solid #ccc;
+    margin: 10px;
+    padding: 10px;
+    border-radius: 5px;
+}
+.table-container .dropdown {
+    margin-bottom: 10px;
+}
+table th .icon-btn{
+    float: right;
+}
+.icon-btn{
+    cursor: pointer;
+    margin-right: 3px;
+}
+.dropdown-menu > div, .sort-column {
+    cursor: pointer;
+}
+.dropdown-menu > div {
+    padding: 2px 5px;
+}
+.grey{
+    color: #ccc;
+}
+.black{
+    color: #000;
+}
+.sort-column > span {
+    position: relative;
+    margin-left: 10px;
+}
+.sort-column > span > i:first-child {
+    position: absolute;
+    top: 0;
+}
+.sort-column > span > i:last-child {
+    position: absolute;
+    bottom: -3px;
+}
+.active {
+    background-color: #545b62;
+    border-color: #4e555b;
+    color: #FFF;
+}
+.dialog{
+    border: 1px solid #ccc;
+    position: fixed;
+    width: 600px;
+    min-height: 400px;
+    top: 100px;
+    z-index: 10;
+    background: #fff;
+    left: 50%;
+    margin-left: -350px;
+    border-radius: 5px;
+}
+.dialog header {
+    border-bottom: 1px solid #ccc;
+    line-height: 30px;
+    padding: 5px 10px;
+    font-weight: bold;
+}
+.dialog header .cancel-btn{
+    display: inline-block;
+    float: right;
+    width: 30px;
+    text-align: center;
+    cursor: pointer;
+}
+.dialog section {
+    height: 310px;
+    overflow: hidden;
+    overflow-y: auto;
+    padding: 10px;
+}
+.dialog-overlay{
+    position: fixed;
+    z-index: 9;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background: rgba(0,0,0,0.5);
+}
